--- a/go/hover.yaml
+++ b/go/hover.yaml
@@ -1,7 +1,7 @@
 #application-name: "Shurli" # Uncomment to modify this value.
 #executable-name: "Shurli" # Uncomment to modify this value. Only lowercase a-z, numbers, underscores and no spaces
 #package-name: "Shurli" # Uncomment to modify this value. Only lowercase a-z, numbers and no underscores or spaces
-license: "" # MANDATORY: Fill in your SPDX license name: https://spdx.org/licenses
+license: "MIT" # MANDATORY: Fill in your SPDX license name: https://spdx.org/licenses
 target: lib/main_desktop.dart
 branch: "" # Change to "@latest" to download the latest go-flutter version on every build
 # opengl: "none" # Uncomment this line if you have trouble with your OpenGL driver (https://github.com/go-flutter-desktop/go-flutter/issues/272)
