--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  font_awesome_flutter: ^8.8.1
+  font_awesome_flutter:
+    git:
+      url: git://github.com/satindergrewal/font_awesome_flutter
+      ref: master
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  flutter_icons:
+    git:
+      url: git://github.com/KomodoPlatform/flutter-icons
+      ref: master
 
 # dependency_overrides:
 #   font_awesome_flutter:
