--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  grpc: ^2.2.0
+  protobuf: ^1.0.1
   flutter_icons:
     git:
       url: git://github.com/KomodoPlatform/flutter-icons
