use master branch to trigger CI build

--- a/.github/workflows/shurli_cd.yml
+++ b/.github/workflows/shurli_cd.yml
@@ -3,10 +3,10 @@ name: Shurli CI
 on:
   push:
     branches:
-    - grewal
+    - master
   # schedule:
     # Run at 00:00 UTC on Monday
-    # - cron:  "0 0 * * 1"
+    # - cron:  "0 0 * * 1" 
 
 jobs:
 
@@ -23,7 +23,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          ref: 'dev'
+          ref: 'master'
 
       - name: Build Shurli (Linux)
         env:
@@ -139,7 +139,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
-          ref: 'dev'
+          ref: 'master'
 
       - name: Install deps (macOS)
         run: |
