--- a/.github/workflows/shurli_cd.yml
+++ b/.github/workflows/shurli_cd.yml
@@ -38,13 +38,6 @@ jobs:
           go get -u github.com/Meshbits/shurli && \
           cd $HOME/go/src/github.com/Meshbits/shurli && \
           make build-linux
-      
-      # - name: Build Shurli (MacOS)
-      #   env:
-      #     DEBIAN_FRONTEND: noninteractive
-      #   run: |
-      #     cd $HOME/go/src/github.com/Meshbits/shurli && \
-      #     make build-osx
 
       - name: Install deps (Windows)
         run: |
@@ -64,77 +57,11 @@ jobs:
           name: shurli_linux.zip
           path: /home/runner/go/src/github.com/Meshbits/shurli/dist/shurli_linux.zip
       
-      # - name: Upload shurli_macos.zip as artifact
-      #   uses: actions/upload-artifact@v1
-      #   with:
-      #     name: shurli_macos.zip
-      #     path: /home/runner/go/src/github.com/Meshbits/shurli/dist/shurli_macos.zip
-        
       - name: Upload shurli_win.zip as artifact
         uses: actions/upload-artifact@v1
         with:
           name: shurli_win.zip
           path: /home/runner/go/src/github.com/Meshbits/shurli/dist/shurli_win.zip
-
-      # - name: Extract branch name
-      #   shell: bash
-      #   run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-      #   id: extract_branch
-
-      # - name: Shortify commit sha
-      #   shell: bash
-      #   run: echo "##[set-output name=sha_short;]$(echo ${GITHUB_SHA::7})"
-      #   id: shortify_commit
-
-      # - name: Create Release
-      #   id: create_release
-      #   uses: actions/create-release@latest
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     tag_name: release_v0.${{ github.run_number }}
-      #     release_name: release_v0.${{ github.run_number }}
-      #     body: |
-      #       CD Release
-      #       Github SHA: ${{ github.sha }}
-      #       Branch: ${{ steps.extract_branch.outputs.branch }}
-      #       Build number: ${{ github.run_number }}
-      #       version: v0.${{ github.run_number }}
-      #     draft: false
-      #     prerelease: true
-
-      # - name: Upload Linux Release Asset
-      #   id: upload-linux-release-asset
-      #   uses: actions/upload-release-asset@latest
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-      #     asset_path: /home/runner/go/src/github.com/Meshbits/shurli/dist/shurli_linux.zip
-      #     asset_name: shurli_linux_v0.${{ github.run_number }}.zip
-      #     asset_content_type: application/zip
-
-      # - name: Upload macOS Release Asset
-      #   id: upload-macOS-release-asset
-      #   uses: actions/upload-release-asset@latest
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-      #     asset_path: /home/runner/go/src/github.com/Meshbits/shurli/dist/shurli_macos.zip
-      #     asset_name: shurli_macos_v0.${{ github.run_number }}.zip
-      #     asset_content_type: application/zip
-
-      # - name: Upload Windows Release Asset
-      #   id: upload-windows-release-asset
-      #   uses: actions/upload-release-asset@latest
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #   with:
-      #     upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-      #     asset_path: /home/runner/go/src/github.com/Meshbits/shurli/dist/shurli_win.zip
-      #     asset_name: shurli_win_v0.${{ github.run_number }}.zip
-      #     asset_content_type: application/zip
   
   macOS-build:
     name: macOS-build
@@ -145,13 +72,6 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: 'master'
-
-      # - name: Install deps (macOS)
-      #   run: |
-      #     brew update &&
-      #     brew install golang autoconf autogen automake binutils \
-      #       gcc@8 &&
-      #     pwd
 
       - name: Build Shurli (macOS)
         run: |
@@ -170,3 +90,84 @@ jobs:
         with:
           name: shurli_macos.zip
           path: /Users/runner/go/src/github.com/Meshbits/shurli/dist/shurli_macos.zip
+
+  publish-release:
+      name: Publishing CD releases
+      runs-on: ubuntu-latest
+      needs: [Linux-Win-builds, macOS-build]
+
+      steps:
+        - name: Download shurli_linux.zip
+          uses: actions/download-artifact@v1
+          with:
+            name: shurli_linux
+
+        - name: Download shurli_macos.zip
+          uses: actions/download-artifact@v1
+          with:
+            name: shurli_macos
+
+        - name: Download shurli_win.zip
+          uses: actions/download-artifact@v1
+          with:
+            name: shurli_win
+
+        - name: Extract branch name
+          shell: bash
+          run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+          id: extract_branch
+
+        - name: Shortify commit sha
+          shell: bash
+          run: echo "##[set-output name=sha_short;]$(echo ${GITHUB_SHA::7})"
+          id: shortify_commit
+
+        - name: Create Release
+          id: create_release
+          uses: actions/create-release@latest
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            tag_name: release_v0.${{ github.run_number }}
+            release_name: release_v0.${{ github.run_number }}
+            body: |
+              CD Release
+              Github SHA: ${{ github.sha }}
+              Branch: ${{ steps.extract_branch.outputs.branch }}
+              Build number: ${{ github.run_number }}
+              version: v0.${{ github.run_number }}
+            draft: false
+            prerelease: true
+
+        - name: Upload Linux Release Asset
+          id: upload-linux-release-asset
+          uses: actions/upload-release-asset@latest
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+            asset_path: shurli_linux/shurli_linux.zip
+            asset_name: shurli_linux_v0.${{ github.run_number }}.zip
+            asset_content_type: application/zip
+        
+        - name: Upload macOS Release Asset
+          id: upload-macOS-release-asset
+          uses: actions/upload-release-asset@latest
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+            asset_path: shurli_macos/shurli_macos.zip
+            asset_name: shurli_macos_v0.${{ github.run_number }}.zip
+            asset_content_type: application/zip
+
+        - name: Upload Windows Release Asset
+          id: upload-windows-release-asset
+          uses: actions/upload-release-asset@latest
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+            asset_path: shurli_win/shurli_win.zip
+            asset_name: shurli_win_v0.${{ github.run_number }}.zip
+            asset_content_type: application/zip
