--- a/.github/workflows/shurli_cd.yml
+++ b/.github/workflows/shurli_cd.yml
@@ -54,13 +54,13 @@ jobs:
       - name: Upload shurli-linux.zip as artifact
         uses: actions/upload-artifact@v1
         with:
-          name: shurli_linux.zip
+          name: shurli_linux
           path: /home/runner/go/src/github.com/Meshbits/shurli/dist/shurli_linux.zip
       
       - name: Upload shurli_win.zip as artifact
         uses: actions/upload-artifact@v1
         with:
-          name: shurli_win.zip
+          name: shurli_win
           path: /home/runner/go/src/github.com/Meshbits/shurli/dist/shurli_win.zip
   
   macOS-build:
@@ -88,7 +88,7 @@ jobs:
       - name: Upload shurli_macos.zip as artifact
         uses: actions/upload-artifact@v1
         with:
-          name: shurli_macos.zip
+          name: shurli_macos
           path: /Users/runner/go/src/github.com/Meshbits/shurli/dist/shurli_macos.zip
 
   publish-release:
